--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,1 +1,8 @@
-include "db.conf"
+db.default.jdbcUri: "jdbc:h2:mem:slick-example"
+db.default.driverClassName: "org.h2.Driver"
+db.default.username: "db"
+db.default.password: ""
+db.default.pool.partitionCount: 1
+db.default.pool.minConnectionsPerPartition: 1
+db.default.pool.maxConnectionsPerPartition: 3
+
