--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,13 +1,9 @@
-db {
-  default {
-    jdbcUri = "jdbc:h2:mem:slick-example"
-    driverClassName = "org.h2.Driver"
-    username = "db"
+default {
+  profile = "slick.jdbc.H2Profile$"
+  db {
+    user = "db"
     password = ""
-    pool {
-      partitionCount = 1
-      minConnectionsPerPartition = 1
-      maxConnectionsPerPartition = 3
-    }
+    driver = "org.h2.Driver"
+    url = "jdbc:h2:mem:slick-example"
   }
 }
